kubernetes/alb-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alb-demo
  namespace: alb-test
  labels:
    app: alb-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alb-demo

  template:
    metadata:
      labels:
        app: alb-demo

    spec:
      containers:
        - name: alb-demo
          image: public.ecr.aws/docker/library/nginx:stable-alpine

          ports:
            - containerPort: 80
              name: http

          resources:
            requests:
              cpu: 50m
              memory: 64Mi

            limits:
              cpu: 200m
              memory: 128Mi
