kubernetes/alb-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alb-demo
  namespace: alb-test

spec:
  selector:
    app: alb-demo

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
